# yt_uploader

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  DISTRIBUTION.md  LICENSE  LINTING_GUIDE.md  OPTIMIZATION_REVIEW.md  README.md  SETUP_GUIDE.md  TESTING_GUIDE.md  analyze_exe.py  bandit-report.json  build.bat  build.ps1  build.py  build_exe.py  build_exe_debug.py  build_exe_verbose.py  build_minimal.py  build_minimal_test.py  build_onedir.py  build_simple.py  build_simple_clean.py  build_simple_test.py  check_build_status.py  demo.py  monitor_build.py  monitor_build_simple.py  prompts.py  pyproject.toml  pytest.ini  requirements-build.txt  requirements-dev.txt  requirements.txt  run_lint.py  run_tests.py  test_build.py  test_exe_debug.py  test_integration.py  (+3 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: __init__.py  main.py  main_direct.py  main_no_auth.py  splash_screen.py
app/ui/: auth_widget.py  conversion_worker.py  credentials_dialog.py  folder_chip_bar.py  history_widget.py  main_window.py  media_converter.py  media_info_widget.py  media_preview.py  media_row.py  media_row_updater.py  schedule_dialog.py  upload_status.py  upload_summary.py
core/: animations.py  auth_manager.py  config.py  file_organizer.py  history_manager.py  media_persistence_service.py  models.py  scanner.py  settings_manager.py  styles.py  upload_manager.py  validators.py
docs/: BUILD_GUIDE.md  INTEGRATION_GUIDE.md  STYLING_GUIDE.md  persistence_system_optimization_summary.md
infra/: events.py  uploader.py
services/: youtube_service.py
tests/: __init__.py  conftest.py  test_auth_manager.py  test_credentials_dialog.py  test_file_organizer.py  test_folder_chip_bar.py  test_main_window_reload.py  test_main_with_splash.py  test_media_preview_enhanced.py  test_media_row_updater.py  test_models.py  test_splash_screen.py  test_ui_components.py  test_ui_media_row.py  test_upload_manager.py  test_upload_manager_file_organization.py  test_youtube_service.py
